# weather-anomaly

./: .gitignore  01_build_historical_zarr.py  01_historical.py  02_forecast.py  03_compare.py  README.md  main.py  pyproject.toml  weather.ipynb
.github/workflows/: data-pipeline.yml  deploy.yml
app/: .env.example  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx
app/src/anomaly/: get-tile-data.ts  metadata.ts  render-tile.ts  selection.ts
app/src/gpu/: colormap.ts  filter-range.ts  sample-texture-2d-array.ts
app/src/ui/: control-panel.tsx
data-prep/: 01_historical.py  02_forecast.py  03_compare.py
data/anomaly.zarr/: zarr.json
data/anomaly.zarr/ensemble_member/: zarr.json
data/anomaly.zarr/expected_forecast_length/: zarr.json
data/anomaly.zarr/ingested_forecast_length/: zarr.json
data/anomaly.zarr/init_time/: zarr.json
data/anomaly.zarr/temp_max_anom/: zarr.json
data/anomaly.zarr/temp_max_anom/c/0/0/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  3  4  5  6  7  8  9
data/anomaly.zarr/temp_max_anom/c/0/1/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  3  4  5  6  7  8  9
data/anomaly.zarr/temp_max_anom/c/0/10/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  3  4  5  6  7  8  9
data/anomaly.zarr/temp_max_anom/c/0/11/: 0  1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  3  4  5  6  7  8  (+1 more)
data/anomaly.zarr/temp_mean_anom/: zarr.json
data/anomaly.zarr/temp_min_anom/: zarr.json
data/anomaly.zarr/temp_min_std/: zarr.json
data/anomaly.zarr/valid_date/: zarr.json
(+1564 files in other folders)
